# autocovid-rs

./: Cargo.toml  README.md  config.example.toml  migrate.py
src/: config.rs  database.rs  logger.rs  owner.rs  runner.rs  school_code.rs  tests.rs  user.rs
