[package]
name = "autocovidbot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.17", features = ["rt", "macros", "rt-multi-thread", "sync", "time", "net", "io-util", "test-util"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.55"
toml = "0.5"
sqlx = { version = "0.5.11", features = ["runtime-tokio-rustls", "postgres", "macros"]}
lazy_static = "1.4.0"
poise = { git = "https://github.com/kangalioo/poise", branch = "master"}
isahc = { version = "1.7", features = ["json"]}
regex = "1.5.5"
async-trait = "0.1.53"
simple_logger = "2.1.0"
log = "0.4.16"
time = "0.3.9"
once_cell = "1.10.0"
serde_urlencoded = "0.7"